--- a/apache.yml
+++ b/apache.yml
@@ -6,7 +6,7 @@
   become: true
 
 
-  tasks:
+  tasks:  
       - name: Install httpd
         yum:
             name: httpd
@@ -25,11 +25,6 @@
             state: started
             enabled: true
 
-      - name: Install firewalld
-        service:
-            name: firewalld
-            state: started
-            enabled: true
       - name: Enable firewalld
         service: name=firewalld state=started enabled=yes
 
@@ -38,3 +33,55 @@
 
       - name: Allow http/https
         command: firewall-cmd --zone=dmz --permanent --add-service=http --add-service=https
+      
+      - name: install wget
+        yum:
+           name: wget
+           state: latest
+      
+      - name: "Install pre-requisites"
+        yum:
+           name: "{{ item }}"
+           state: present
+           with_items: 
+           - autoconf
+           - autoconf-archive
+           - autogen
+           - automake
+           - curl
+           - gcc
+           - git
+           - jq
+           - libmnl-devel
+           - libuuid-devel
+           - make
+           - pkgconfig
+           - zlib-devel
+           when: ansible_os_family == "RedHat"
+
+      - name: "Clone repo"
+        git:
+        clone: yes
+        repo: https://github.com/firehol/netdata.git
+        dest: /tmp/netdata
+
+      - name: "Installation"
+        shell: cd /tmp/netdata/ && ./netdata-installer.sh --dont-wait --libs-are-really-here
+
+      - name: "Clean /tmp"
+        file:
+        path: /tmp/netdata
+        state: absent
+
+      - name: "KillAll"
+        shell: killall netdata
+
+      - name: "Daemon config"
+        systemd:
+        daemon_reload: yes
+        name: netdata
+        enabled: yes
+        state: started
+
+      - name: Allow netdata trafic
+        command : firewall-cmd --permanent --zone=dmz --add-port=19999/tcp
