--- a/apache.yml
+++ b/apache.yml
@@ -34,50 +34,16 @@
       - name: Allow http/https
         command: firewall-cmd --zone=dmz --permanent --add-service=http --add-service=https
       
-      #Netdata part starts here (still have issues with this one)
-      - name: "Install pre-requisites"
+      - name: install wget
         yum:
-           name: "{{ item }}"
-           state: present
-        with_items: 
-           - zlib-devel
-           - libuuid-devel
-           - libmnl-devel
-           - gcc
-           - make
-           - git
-           - atoconf
-           - autogen
-           - automake
-           - pkconfig
-           - curl
-           - jq 
-           - nodejs
-          
+           name: wget
+           state: latest
+      
+      - name: Install Netdata
+        shell: |
+         curl -Ss -o kickstart-static64.sh https://my-netdata.io/kickstart-static64.sh
+         chmod 750 kickstart-static64.sh
+         ./kickstart-static64.sh --non-interactive
 
-      - name: "Clone repo"
-        git:
-        clone: yes
-        repo: https://github.com/firehol/netdata.git
-        dest: /tmp/netdata
-
-      - name: "Installation"
-        shell: cd /tmp/netdata/ && ./netdata-installer.sh --dont-wait --libs-are-really-here 
-        
-      - name: "Clean /tmp"
-        file:
-        path: /tmp/netdata
-        state: absent
-
-      - name: "KillAll"
-        shell: killall netdata
-
-      - name: "Daemon config"
-        systemd:
-          daemon_reload: yes
-          name: netdata
-          enabled: yes
-          state: started
-         #Netdata ends here ( it will work if the part between the comments is removed)
       - name: Allow netdata trafic
-        command : firewall-cmd --permanent --zone=dmz --add-port=19999/tcp
+        command : firewall-cmd --permanent --zone=public --add-port=19999/tcp
